Add safe RNG defaults and enable custom code via env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     restart: unless-stopped
     environment:
       - FLASK_ENV=production
+      - ALLOW_CUSTOM_CODE=1
     volumes:
       - ./backend:/app/backend
       - ./frontend:/app/frontend
